<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/stopwatch"
        android:text="00:00:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginVertical="20dp" />

    <Button
        android:id="@+id/start_stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_stopwatch" />

    <Button
        android:id="@+id/pause_stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_stopwatch" />

    <Button
        android:id="@+id/reset_stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_stopwatch" />

</LinearLayout>