<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.ac.ui.cs.mobileprogramming.roshaniayu.pokediary.ui.PokemonDetailFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:layout_marginTop="80dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/name"
                        android:text="Pikachu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:id="@+id/height"
                        android:text="@string/height"
                        android:layout_marginBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/weight"
                        android:text="@string/weight"
                        android:layout_marginBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:text="@string/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/type_recyclerview"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:text="@string/weakness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/weakness_recyclerview"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:text="@string/prev_evolution"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/prev_evolution_recyclerview"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:id="@+id/prev_evolution_empty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:visibility="gone"
                        android:text="-" />

                    <TextView
                        android:text="@string/next_evolution"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/next_evolution_recyclerview"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:id="@+id/next_evolution_empty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:visibility="gone"
                        android:text="-" />

                    <Button
                        android:id="@+id/catch_pokemon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catch_pokemon" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/image"
                android:layout_alignTop="@id/card_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-50dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_launcher_background" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>